syntax = "proto3";

option csharp_namespace = "FSR.Aas.GRPC.Lib.V3.Services.Operational";

import "Protos/AasModels.V3.proto";
import "Protos/AasApiModels.V3.proto";

package FSR.Aas.GRPC.Lib.V3.Operational;

/* DigitalTwinLayerOperationalService */

message OperationInvokeRequest {
    string requestId = 1;
    string submodelId = 2;
    string operationIdShort = 3;
    repeated OperationVariableDTO inputVariables = 4;
    repeated OperationVariableDTO inoutVariables = 5;
    int64 timestamp = 6;
    bool isAsync = 7;
    string handleId = 8;
}

message OperationRequest {
    string requestId = 1;
}

message OperationStatus {
    string requestId = 1;
    ExecutionState executionState = 2;
}

service DigitalTwinLayerOperationalService {
    rpc OpenOperationInvocationStream (stream OperationStatus) returns (stream OperationInvokeRequest);
    rpc OpenOperationResultStream (stream OperationResult) returns (stream OperationRequest);
    rpc OpenExecutionStateStream (stream OperationStatus) returns (stream OperationRequest);
}